# GameEngine

./: .gitignore  CMakeLists.txt  Game.hpp  main.cpp
Include/Camera/: CameraOrtho.hpp
Include/Mesh/: Cube.hpp  Cubemap.hpp  Mesh.hpp  MeshFactory.hpp  Plane.hpp  Sphere.hpp  Terrain.hpp
Include/Renderer/: LightsManager.hpp  Mesh.hpp  Model.hpp  ModelRenderer.hpp  Renderer.hpp
Include/Renderer/Lights/: DirectionLight.hpp  ILight.hpp  PointLight.hpp
Include/Renderer/Objects/: CubeRenderer.hpp  Material.hpp  PlaneRenderer.hpp
Include/Resources/: ResourceManager.hpp  Texture.hpp
Include/Scene/: Scene.hpp  SceneElement.hpp
Include/System/: BusNode.hpp  MessageBus.hpp
Include/System/Memory/: Allocator.hpp
Shaders/: Color.frag  Color.vs  Texture.frag  sphere.frag  sphere.vs
Source/Camera/: Camera.cpp  CameraFps.cpp  CameraOrtho.cpp
Source/Mesh/: Cube.cpp  Cubemap.cpp  Mesh.cpp  Plane.cpp  Sphere.cpp  Terrain.cpp
Source/Renderer/: LightsManager.cpp  Mesh.cpp  Model.cpp  ModelRenderer.cpp  ObjectsManager.cpp  Renderer.cpp  Shader.cpp  TextureManager.cpp
Source/Renderer/Lights/: DirectionLight.cpp  PointLight.cpp
Source/Renderer/Objects/: CubeRenderer.cpp  Material.cpp  Object.cpp  PlaneRenderer.cpp
Source/Resources/: ResourceManager.cpp  Shader.cpp  Texture.cpp  TextureManager.cpp
Source/Scene/: Scene.cpp  SceneElement.cpp
Source/System/: BusNode.cpp  MessageBus.cpp
dependencies/SimpleOpenGLImageLibrary/projects/VC9/Debug/: SOIL.lib
dependencies/SimpleOpenGLImageLibrary/projects/VC9/Release/: SOIL.lib
